--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 mybatis.config-location=classpath:mybatis-config.xml
 #logging.level.root=DEBUG
-spring.velocity.resourceLoaderPath=classpath:/templates
+spring.velocity.resourceLoaderPath=classpath:/templates/app
 spring.velocity.suffix=.html
 spring.velocity.cache=false
 spring.velocity.toolbox-config-location=toolbox.xml
