--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.velocity.toolbox-config-location=toolbox.xml
 
 
 # 默认值为 /**
-#spring.mvc.static-path-pattern=
+#spring.mvc.static-path-pattern=/templates
 # 默认值为 classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
-spring.resources.static-locations= classpath:/templates/app/icon,classpath:/templates/app/gfont,classpath:/templates/app/css,classpath:/templates/app/assets,classpath:/templates/app/js,classpath:/templates/app/tpl,classpath:/templates/app/views
+spring.resources.static-locations= classpath:templates/app/
 
 # 这里设置要指向的路径，多个使用英文逗号隔开，
